header section complete

--- a/index.html
+++ b/index.html
@@ -8,13 +8,35 @@
 </head>
 <body>
     <header>
-
+        <div class="header-conteiner">
+            <div class="header-text-conteiner">
+                <h3 class="header-title">Let's make 
+                <br>
+                beautiful flowers a 
+                <br>
+                part of your life.</h3>
+                <p class="header-description">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout. The point of using Lorem Ipsum is <br> that it has a more-or-less normal distribution of letters.</p>
+                <button class="btn-primary">Shop Now</button>
+            </div>
+            <img class="header-img" src="Flower Asset/pngwing 10.png" alt="">
+        </div>
     </header>
     <main>
+        <section>
+            <div class="section-feature">
+                <h3 class="feature-title">Our Featured Flowers</h3>
+                <p class="feature-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                <div class="feature-flower-conteiner">
+                    
+                </div>
+                <div class="feature-info-conteiner">
 
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
