featured section complete

--- a/index.html
+++ b/index.html
@@ -25,13 +25,45 @@
         <section>
             <div class="section-feature">
                 <h3 class="feature-title">Our Featured Flowers</h3>
-                <p class="feature-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                <p class="feature-description">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
                 <div class="feature-flower-conteiner">
-                    
+                    <div class="flower-div">
+                        <img class="section-img " src="Flower Asset/pngwing 6.png" alt="">
+                        <p class="flower-div-caption">Pink Flower Tree</p>
+                    </div>
+                    <div class="flower-div flower-div2">
+                        <img class="section-img" src="Flower Asset/pngwing 5.png" alt="">
+                        <p class="flower-div-caption">Pink Flower Tree</p>
+                    </div>
+                    <div class="flower-div flower-div3 ">
+                        <img class="section-img" src="Flower Asset/pngwing 7.png" alt="">
+                        <p class="flower-div-caption">Pink Flower Tree</p>
+                    </div>
                 </div>
                 <div class="feature-info-conteiner">
-
+                    <div class="feature-info-content">
+                        <img class="info-img" src="Flower Asset/Group 57.png" alt="">
+                        <p class="info-description">Same Day Delivery. Click & Collect.</p>
+                    </div>
+                    <div class="feature-info-content">
+                        <img class="info-img" src="Flower Asset/Group 58.png" alt="">
+                        <p class="info-description">Fresh Flowers. Local Growers.</p>
+                    </div>
+                    <div class="feature-info-content">
+                        <img class="info-img" src="Flower Asset/Group 59.png" alt="">
+                        <p class="info-description">24/7 Free Support.</p>
+                    </div>
                 </div>
+            </div>
+        </section>
+        <section>
+            <div class="section-hot-Deal">
+                <div class="hot-deal-info">
+                    <h3 class="hot-deal-title">Hot Deal ! Sale Up To 25% <span>Off</span></h3>
+                    <p class="hot-deal-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                    <button class="btn-primary">Sign Up</button>
+                </div>
+                <img class="hot-deal-img" src="Flower Asset/pngwing 8.png" alt="">
             </div>
         </section>
     </main>
