--- a/index.html
+++ b/index.html
@@ -59,12 +59,20 @@
         <section>
             <div class="section-hot-Deal">
                 <div class="hot-deal-info">
-                    <h3 class="hot-deal-title">Hot Deal ! Sale Up To 25% <span>Off</span></h3>
-                    <p class="hot-deal-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                    <h3 class="hot-deal-title">Hot Deal ! Sale Up To 25% <span id="font-style">Off</span></h3>
+                    <p class="hot-deal-description">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
                     <button class="btn-primary">Sign Up</button>
                 </div>
                 <img class="hot-deal-img" src="Flower Asset/pngwing 8.png" alt="">
             </div>
+        </section>
+        <section>
+            <div class="section-instagram">
+                <h3 class="feature-title">Instagram</h3>
+                <p class="feature-description">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+                
+            </div>
+
         </section>
     </main>
     <footer>
