--- a/index.html
+++ b/index.html
@@ -68,8 +68,15 @@
         </section>
         <section>
             <div class="section-instagram">
-                <h3 class="feature-title">Instagram</h3>
-                <p class="feature-description">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+                <h3 class="instagram-title">Instagram</h3>
+                <p class="instagram-description">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+
+                <div class="instagram-img-conteiner">
+                    <img src="Flower Asset/Flower 01.png" alt="">
+                    <img src="Flower Asset/Rectangle 4.png" alt="">
+                    <img src="Flower Asset/Rectangle 5.png" alt="">
+                    <img src="Flower Asset/Rectangle 6.png" alt="">
+                </div>
                 
             </div>
 
