--- a/index.html
+++ b/index.html
@@ -77,13 +77,20 @@
                     <img src="Flower Asset/Rectangle 5.png" alt="">
                     <img src="Flower Asset/Rectangle 6.png" alt="">
                 </div>
-                
             </div>
-
+        </section>
+        <section class="section-input">
+            <div>
+                <h3 class="input-title">Get The Latest Deals</h3>
+                <p class="input-description">$30 coupon for first shopping</p>
+                <form class="contact" action="">
+                    <input class="email-tag" type="email" name="" id="" placeholder="Enter your email here....">
+                    <input class="btn-primary" type="submit" value="Subscribe">
+                </form>
+            </div>
         </section>
     </main>
     <footer>
-
     </footer>
 </body>
 </html>
