--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <section>
             <div class="section-hot-Deal">
                 <div class="hot-deal-info">
-                    <h3 class="hot-deal-title">Hot Deal ! Sale Up To 25% <span id="font-style">Off</span></h3>
+                    <h3 class="hot-deal-title">Hot Deal ! Sale Up To 25% <span class="font-style">Off</span></h3>
                     <p class="hot-deal-description">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
                     <button class="btn-primary">Sign Up</button>
                 </div>
@@ -91,6 +91,13 @@
         </section>
     </main>
     <footer>
+        <div id="footer-flower-shop">
+            <div class="">
+                <h3 class="footer-title"> <span class="font-style">Flower</span>Shop</h3>
+                <p class="footer-description">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+                <p class="footer-symbol"><small>@2020-2023, FlowerShop.com. All rights reserved. </small></p>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
