--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flower Shop</title>
+    <link rel="shortcut icon" href="Flower Asset/Northern-Landscapes-flower-favicon.jpg" type="image/x-icon">
     <link rel="stylesheet" href="Styles/style.css">
 </head>
 <body>
